# projects

./: .gitignore  README.md  pyproject.toml
bee_forecasting/: README.md
bee_forecasting/apps/: dashboard.py
bee_forecasting/configs/: default.yaml
bee_forecasting/data/: download_bee_data.py  download_weather.py
bee_forecasting/src/bee_forecasting/: __init__.py  datasets.py  features.py  rolling.py
bee_forecasting/src/bee_forecasting/models/: base.py  machine_learning.py  statistical.py
bee_forecasting/src/bee_forecasting/scripts/: run_forecasts.py
forecasting_core/src/forecasting_core/: __init__.py
forecasting_core/src/forecasting_core/models/: __init__.py
virtual_screening/: README.md
virtual_screening/configs/: mpro.yaml
virtual_screening/src/virtual_screening/: __init__.py  admet.py  docking.py  prep.py  reporting.py  rescoring.py
virtual_screening/src/virtual_screening/scripts/: run_pipeline.py
water_level_forecasting/: README.md
water_level_forecasting/configs/: potomac.yaml
water_level_forecasting/src/water_level_forecasting/: __init__.py  datasets.py  features.py
water_level_forecasting/src/water_level_forecasting/scripts/: run_forecasts.py
